force-app/main/default/objects/ampi__Project__c/ampi__Project__c.object-meta.xml
<CustomObject>
    <description>Project or grant where progress against goals needs to be measured</description>
    <label>Project</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>