force-app/main/default/objects/ampi__Project__c/fields/Account_Teams__c.field-meta.xml
<CustomField>
    <fullName>Account_Teams__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Organisation record which is populated here will be used as the basis for sharing this Project record with external users in the MA Portal. For Projects (Grants, Standard, Emergency) this should be the shadow Organisation record named like &quot;{Project ID} - External Project Team&quot;. For Programmes or NMUs, this should be the NA that they fall underneath.</description>
    <inlineHelpText>The Organisation record which is populated here will be used as the basis for sharing this Project record with external users in the MA Portal. For Projects (Grants, Standard, Emergency) this should be the shadow Organisation record named like &quot;{Project ID} - External Project Team&quot;. For Programmes or NMUs, this should be the NA that they fall underneath.</inlineHelpText>
    <label>External Project Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Account Team)</relationshipLabel>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>