force-app/main/default/objects/ampi__Project__c/fields/Actual_Exit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Exit_End_Date__c</fullName>
    <label>Actual Exit End Date</label>
    <type>Date</type>
</CustomField>