force-app/main/default/objects/ampi__Project__c/fields/Actual_Implementation_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Actual_Implementation_Duration_Months__c</fullName>
    <formula>((Actual_Implementation_End_Date__c - Actual_Implementation_Start_Date__c) / 365 )* 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of months the project is set to last for, calculated from the Project Start Date and the Project End Date</inlineHelpText>
    <label>Actual Implementation Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>