force-app/main/default/objects/ampi__Project__c/fields/Actual_Implementation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Implementation_End_Date__c</fullName>
    <label>Actual Implementation End Date</label>
    <type>Date</type>
</CustomField>