force-app/main/default/objects/ampi__Project__c/fields/Actual_Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Implementation_Start_Date__c</fullName>
    <inlineHelpText>This is the date when the project actually starts to deliver services, and can be compared to the planned start date</inlineHelpText>
    <label>Actual Implementation Start Date</label>
    <type>Date</type>
</CustomField>