force-app/main/default/objects/ampi__Project__c/fields/Actual_Indirect_Beneficiaries__c.field-meta.xml
<CustomField>
    <fullName>Actual_Indirect_Beneficiaries__c</fullName>
    <label>Actual Indirect Beneficiaries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>