force-app/main/default/objects/ampi__Project__c/fields/Actual_Number_Of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_Of_Participants__c</fullName>
    <defaultValue>-1</defaultValue>
    <label>Actual Number Of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>