force-app/main/default/objects/ampi__Project__c/fields/Actuals_Total_Project_Expenditures_DCY__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Total_Project_Expenditures_DCY__c</fullName>
    <formula>Actuals_Total_Project_Expenditures_LC__c   / Exchange_Rate_LCY_to_DCY_Actuals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actuals Total Project Expenditures (DCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>