force-app/main/default/objects/ampi__Project__c/fields/Actuals_Total_Project_Expenditures_LC__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Total_Project_Expenditures_LC__c</fullName>
    <inlineHelpText>Indicate total actual amount of project expenditures in local currency.</inlineHelpText>
    <label>Actuals Total Project Expenditures (LCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>