force-app/main/default/objects/ampi__Project__c/fields/Add_funding_require__c.field-meta.xml
<CustomField>
    <fullName>Add_funding_require__c</fullName>
    <inlineHelpText>Specify if the project requires additional international funding for it&apos;s implementation</inlineHelpText>
    <label>Add. funding required for implementation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>