force-app/main/default/objects/ampi__Project__c/fields/Add_funding_required_for_exit__c.field-meta.xml
<CustomField>
    <fullName>Add_funding_required_for_exit__c</fullName>
    <description>Specify if the project requires additional international funding for its exit. Renamed as part of Phase 2 - Sprint 2.2 release of Standard Project Approval processes.</description>
    <label>Add. Int. Funding Required for Exit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>