force-app/main/default/objects/ampi__Project__c/fields/Additional_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Project_Description__c</fullName>
    <description>Please add other relevant information here. Length set to 13000 char.</description>
    <inlineHelpText>Please add other relevant information here. Length set to 13000 characters.  The description can be changed and updated at any time throughout the process.</inlineHelpText>
    <label>Additional Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>