force-app/main/default/objects/ampi__Project__c/fields/Additional_Requirements_As_In_Contract__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirements_As_In_Contract__c</fullName>
    <inlineHelpText>Please add detailed information on exceptional donor requirements e.g. separate bank account, specific exchange rate, additional project audit, etc.</inlineHelpText>
    <label>Additional Requirements As In Contract</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>