force-app/main/default/objects/ampi__Project__c/fields/Agreed_Language_for_narrative_reports__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Language_for_narrative_reports__c</fullName>
    <label>Agreed Language for narrative reports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>