force-app/main/default/objects/ampi__Project__c/fields/ampi__Account__c.field-meta.xml
<CustomField>
    <fullName>ampi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field refers to the parent Account record. For IATI reporting, this field must be populated in order to print this Project into an IATI Activity XML.</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>