force-app/main/default/objects/ampi__Project__c/fields/ampi__Address__c.field-meta.xml
<CustomField>
    <fullName>ampi__Address__c</fullName>
    <description>Text area to store the address of project site</description>
    <label>Project Address</label>
    <type>TextArea</type>
</CustomField>