force-app/main/default/objects/ampi__Project__c/fields/ampi__Current__c.field-meta.xml
<CustomField>
    <fullName>ampi__Current__c</fullName>
    <description>Checkbox to indicate if project is active</description>
    <formula>ampi__End_Date__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>