force-app/main/default/objects/ampi__Project__c/fields/ampi__Default_IP_Id__c.field-meta.xml
<CustomField>
    <fullName>ampi__Default_IP_Id__c</fullName>
    <description>This field specifies which Implementation Plan should open on the Implementation Plan page, using its 18 character Salesforce Id. If no Id is specified, then the Implementation Plan will default to the first Implementation Plan on the list, ordered alphabetically by name.</description>
    <inlineHelpText>Specify which Implementation Plan opens automatically on the Activities tab, using its 18 character Salesforce Id. If no Id is specified, then the Implementation Plan will default to the first Implementation Plan, ordered alphabetically by name.</inlineHelpText>
    <label>Default Implementation Plan Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>