force-app/main/default/objects/ampi__Project__c/fields/ampi__Default_Targets_RP_Id__c.field-meta.xml
<CustomField>
    <fullName>ampi__Default_Targets_RP_Id__c</fullName>
    <description>This field specifies which Reporting Period should be opened when navigating to the SetTargets page of this Project__c. If no Id is specified, then the Reporting Period will default to the first Reporting Period on the list, ordered by ascending End Date.</description>
    <inlineHelpText>This field specifies which Reporting Period should open on the Set Targets page, using its 18char Salesforce ID. If no ID is specified, then the Reporting Period list will default to the first reporting period on the list, ordered by End_Date__c.</inlineHelpText>
    <label>Default Targets RP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>