force-app/main/default/objects/ampi__Project__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>Long text field to describe the project</description>
    <inlineHelpText>Add description of your project (1024 char max), describe specific objectives. Include key words to ease the search (e.g. country, donor). The description can be changed and updated at any time and is shown on the Team Site.</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>