force-app/main/default/objects/ampi__Project__c/fields/ampi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__End_Date__c</fullName>
    <description>Date field to store the end date for this project</description>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>