force-app/main/default/objects/ampi__Project__c/fields/ampi__Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>ampi__Funding_Amount__c</fullName>
    <description>Total amount of money that has been granted for a particular project.</description>
    <inlineHelpText>Total amount of funding available for a project.</inlineHelpText>
    <label>Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>