force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Activity_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Activity_Identifier__c</fullName>
    <description>Text field that indicates the unique identifier for this activity for IATI reporting.</description>
    <inlineHelpText>Indicate the identifier for this activity here</inlineHelpText>
    <label>IATI Activity Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>