force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Activity_Scope__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Activity_Scope__c</fullName>
    <description>Picklist field to capture the geographic scope of an IATI Activity.</description>
    <label>IATI Activity Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Global</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Regional</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Multi-national</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>National</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Sub-national: Multi-first-level administrative areas</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Sub-national: Single first-level administrative area</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Sub-national: Single second-level administrative area</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Single location</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>