force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Aid_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Aid_Type__c</fullName>
    <description>Picklist field to choose the type of aid being supplied (project-type intervention, budget support, debt relief, etc.).</description>
    <inlineHelpText>Type of Classification; The type of aid being supplied (project-type intervention, budget support, debt relief, etc.). This element specifies a default for all the activity&apos;s financial transactions; it can be overridden at the individual transaction level</inlineHelpText>
    <label>IATI Aid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General budget support</fullName>
            </value>
            <value>
                <fullName>Sector budget support</fullName>
            </value>
            <value>
                <fullName>Core support to NGOs, other private bodies, PPPs and research institutes</fullName>
            </value>
            <value>
                <fullName>Core contributions to multilateral institutions</fullName>
            </value>
            <value>
                <fullName>Contributions to specific-purpose programmes and funds managed by international organisations (multilateral, INGO)</fullName>
            </value>
            <value>
                <fullName>Basket funds/pooled funding</fullName>
            </value>
            <value>
                <fullName>Project-type interventions</fullName>
            </value>
            <value>
                <fullName>Donor country personnel</fullName>
            </value>
            <value>
                <fullName>Other technical assistance</fullName>
            </value>
            <value>
                <fullName>Scholarships/training in donor country</fullName>
            </value>
            <value>
                <fullName>Imputed student costs</fullName>
            </value>
            <value>
                <fullName>Debt relief</fullName>
            </value>
            <value>
                <fullName>Administrative costs not included elsewhere</fullName>
            </value>
            <value>
                <fullName>Development awareness</fullName>
            </value>
            <value>
                <fullName>Refugees in donor countries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>