force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Aid_Type_Vocabulary__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Aid_Type_Vocabulary__c</fullName>
    <description>Picklist field to track which vocabulary is being used to classify an IATI Activity&apos;s Aid Type for IATI reporting.</description>
    <label>IATI Aid Type Vocabulary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>OECD DAC</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Earmarking Category</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Earmarking Modality</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Cash and Voucher Modalities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>