force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Budget_Not_Provided_Reason__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Budget_Not_Provided_Reason__c</fullName>
    <description>Picklist to set the IATI code for the reason why a budget is not provided for this IATI Activity, pulling from http://reference.iatistandard.org/203/codelists/BudgetNotProvided/</description>
    <label>IATI Reason for Budget Not Provided?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Commercial Restrictions</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Legal Restrictions</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Rapid Onset Emergency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>