force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Capital_Spend__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Capital_Spend__c</fullName>
    <description>Percent field to track the percent of the total commitment that is for capital spending, for the purpose of IATI reporting.</description>
    <label>IATI Capital Spend</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>