force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Collaboration_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Collaboration_Type__c</fullName>
    <description>Picklist field to identify the type of collaboration involved in the activity&apos;s disbursements</description>
    <inlineHelpText>Select the type of collaboration involved in the activity&apos;s disbursements, e.g. bilateral or multilateral.</inlineHelpText>
    <label>IATI Collaboration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bilateral</fullName>
            </value>
            <value>
                <fullName>Multilateral (inflows)</fullName>
            </value>
            <value>
                <fullName>Bilateral, core contributions to NGOs and other private bodies / PPPs</fullName>
            </value>
            <value>
                <fullName>Multilateral outflows</fullName>
            </value>
            <value>
                <fullName>Private sector outflows</fullName>
            </value>
            <value>
                <fullName>Bilateral, ex-post reporting on NGOs’ activities funded through core contributions</fullName>
            </value>
            <value>
                <fullName>Bilateral, triangular co-operation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>