force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Collaboration_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Collaboration_Type_Code__c</fullName>
    <description>Formula field that prints an associated code based on the value selected in the ampi__IATI_Collaboration_Type__c field</description>
    <formula>CASE(ampi__IATI_Collaboration_Type__c,
&quot;Bilateral&quot;,1,
&quot;Multilateral (inflows)&quot;,2,
&quot;Bilateral, core contributions to NGOs and other private bodies / PPPs&quot;,3,
&quot;Multilateral outflows&quot;,4,
&quot;Private sector outflows&quot;,6,
&quot;Bilateral, ex-post reporting on NGOs’ activities funded through core contributions&quot;,7,
&quot;Bilateral, triangular co-operation&quot;,8,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The code associated with the collaboration involved in the activity&apos;s disbursements, e.g. bilateral or multilateral.</inlineHelpText>
    <label>IATI Collaboration Type Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>