force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Condition__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Condition__c</fullName>
    <description>Text field to document specific terms and conditions attached to the activity</description>
    <inlineHelpText>Specify terms and conditions attached to the activity that, if not met, may influence the delivery of commitments made by participating organizations.</inlineHelpText>
    <label>IATI Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>