force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Condition_Attached__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Condition_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to choose whether or not there are conditions attached to the activity for IATI reporting.</description>
    <inlineHelpText>Indicate whether or not there are terms and conditions attached to the activity that, if not met, may influence the delivery of commitments made by participating organizations</inlineHelpText>
    <label>IATI Condition Attached</label>
    <type>Checkbox</type>
</CustomField>