force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Condition_Type__c</fullName>
    <description>Picklist field to indicate the condition type, per the IATI Activity standard.</description>
    <inlineHelpText>Use the picklist to indicate the condition type</inlineHelpText>
    <label>IATI Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>