force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Condition_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Condition_Type_Code__c</fullName>
    <description>Formula field to associate an IATI code with the condition type</description>
    <formula>CASE (ampi__IATI_Condition_Type__c, &quot;Policy&quot;,1,
&quot;Performance&quot;,2,
&quot;Fiduciary&quot;,3,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Code associated with the condition type</inlineHelpText>
    <label>IATI Condition Type Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>