force-app/main/default/objects/ampi__Project__c/fields/ampi__IATI_Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Finance_Type__c</fullName>
    <description>Picklist field to choose the type of finance (e.g. grant, loan, debt relief, etc) per the IATI Activity standard.</description>
    <inlineHelpText>Type of Classification; The type of finance (e.g. grant, loan, debt relief, etc). This the default value for all transactions in the activity report; it can be overridden by individual transactions.</inlineHelpText>
    <label>IATI Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard grant</fullName>
            </value>
            <value>
                <fullName>Subsidies to national private investors</fullName>
            </value>
            <value>
                <fullName>Interest subsidy</fullName>
            </value>
            <value>
                <fullName>Interest subsidy to national private exporters</fullName>
            </value>
            <value>
                <fullName>Capital subscription on deposit basis</fullName>
            </value>
            <value>
                <fullName>Capital subscription on encashment basis</fullName>
            </value>
            <value>
                <fullName>Aid loan excluding debt reorganisation</fullName>
            </value>
            <value>
                <fullName>Investment-related loan to developing countries</fullName>
            </value>
            <value>
                <fullName>Loan in a joint venture with the recipient</fullName>
            </value>
            <value>
                <fullName>Loan to national private investor</fullName>
            </value>
            <value>
                <fullName>Loan to national private exporter</fullName>
            </value>
            <value>
                <fullName>Standard loan</fullName>
            </value>
            <value>
                <fullName>Reimbursable grant</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Asset-backed securities</fullName>
            </value>
            <value>
                <fullName>Other debt securities</fullName>
            </value>
            <value>
                <fullName>Subordinated loan</fullName>
            </value>
            <value>
                <fullName>Preferred equity</fullName>
            </value>
            <value>
                <fullName>Other hybrid instruments</fullName>
            </value>
            <value>
                <fullName>Non-banks guaranteed export credits</fullName>
            </value>
            <value>
                <fullName>Non-banks non-guaranteed portions of guaranteed export credits</fullName>
            </value>
            <value>
                <fullName>Bank export credits</fullName>
            </value>
            <value>
                <fullName>Common equity</fullName>
            </value>
            <value>
                <fullName>Acquisition of equity not part of joint venture in developing countries</fullName>
            </value>
            <value>
                <fullName>Other acquisition of equity</fullName>
            </value>
            <value>
                <fullName>Shares in collective investment vehicles</fullName>
            </value>
            <value>
                <fullName>Reinvested earnings</fullName>
            </value>
            <value>
                <fullName>Debt forgiveness/conversion: ODA claims (P)</fullName>
            </value>
            <value>
                <fullName>Debt forgiveness/conversion: ODA claims (I)</fullName>
            </value>
            <value>
                <fullName>Debt forgiveness/conversion: OOF claims (P)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>